--- a/other_configurations/conf.d/todo_app.conf
+++ b/other_configurations/conf.d/todo_app.conf
@@ -1,12 +1,12 @@
 server {
 	listen	80;
 	
-	location /static {
+	location /static/(.*) {
 		root	/Users/leo/Documents/WorkSpace/Python/Flask/Todo/app/static;
 	}
 	
 	location / {
-
 		proxy_pass	http://127.0.0.1:9000;
+		proxy_set_header Host $host;
 	}
 }
